# CSC443H1---W2019

./: README.md
A1/: CMakeLists.txt  Write.cpp  read.cc  read.hh
A2/: CMakeLists.txt  Report.tex  external_sorting_plot.xlsx  hashing_index_histogram.xlsx
A2/scripts/: extract_row.py  extract_test_file.py
A2/src/: common_constants.hpp  external_sorting.cpp  external_sorting.hpp  external_sorting_run_all.bat  hash_indexing.cpp  hash_indexing.hpp  query_by_index.cpp  query_by_index.hpp
